# guardyn

./: .gitignore  .sops.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  NOTICE  QUICKSTART_TESTING.md  README.md  SECURITY.md  flake.nix  k6-test.sh  redeploy-messaging.sh  run-performance-tests.sh
.github/: .copilot-commit-message-instructions.md  FUNDING.yml  GITHUB_TEMPLATES.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  config.yml  contribution.md  documentation.md  feature_request.md  infrastructure.md  testing.md
backend/: Cargo.toml  Dockerfile  README.md  build-docker.sh  build-local.sh
backend/crates/auth-service/: Cargo.toml  Dockerfile  build.rs
backend/crates/auth-service/src/: db.rs  jwt.rs  main.rs  models.rs
backend/crates/auth-service/src/handlers/: delete_account.rs  get_user_profile.rs  key_bundle.rs  login.rs  logout.rs  mls_key_package.rs  mod.rs  refresh_token.rs  register.rs  search_users.rs  validate_token.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: config.rs  error.rs  lib.rs  observability.rs
backend/crates/crypto/: Cargo.toml
backend/crates/crypto/src/: double_ratchet.rs  key_storage.rs  lib.rs  mls.rs  mls.rs.backup  mls_tests.rs  x3dh.rs  x3dh_conversion_tests.rs
backend/crates/e2e-tests/: Cargo.toml  build.rs
backend/crates/e2e-tests/performance/: README.md  auth-load-test.js  combined-load-test.js  messaging-load-test.js  performance-results.json
backend/crates/e2e-tests/scripts/: README.md  k6-test.sh  run-e2e-tests.sh  run-group-tests.sh  test-crypto.sh  test-two-user-chat.sh
backend/crates/e2e-tests/tests/: e2e_groups.rs  e2e_media.rs  e2e_mls_integration.rs  e2e_mvp_simplified.rs  e2e_presence.rs  test_scenarios.md
backend/crates/media-service/: Cargo.toml  build.rs
backend/crates/media-service/src/: config.rs  db.rs  jwt.rs  main.rs  storage.rs  thumbnail.rs
backend/crates/media-service/src/handlers/: delete.rs  download.rs  list.rs  metadata.rs  mod.rs  presigned.rs  thumbnail.rs  upload.rs
backend/crates/messaging-service/: Cargo.toml  Dockerfile  build.rs
backend/crates/messaging-service/src/: auth_client.rs  config.rs  crypto.rs  crypto_tests.rs  db.rs  jwt.rs  main.rs  mls_manager.rs  models.rs  nats.rs
backend/crates/messaging-service/src/handlers/: add_group_member.rs  add_group_member_mls.rs  clear_chat.rs  create_group.rs  delete_message.rs  get_conversations.rs  get_group_by_id.rs  get_group_messages.rs  get_groups.rs  get_messages.rs  leave_group.rs  mark_as_read.rs  mod.rs  receive_messages.rs  receive_messages_e2ee.rs  remove_group_member.rs  send_group_message.rs  send_group_message_mls.rs  send_message.rs  send_message_e2ee.rs
backend/crates/messaging-service/src/websocket/: connection.rs  handlers.rs  messages.rs  mod.rs  server.rs
backend/crates/notification-service/: Cargo.toml
backend/crates/notification-service/src/: main.rs
backend/crates/presence-service/: Cargo.toml  Dockerfile  build.rs
backend/crates/presence-service/src/: db.rs  jwt.rs  main.rs  nats.rs
backend/crates/presence-service/src/handlers/: get_bulk_status.rs  get_status.rs  mod.rs  set_typing.rs  subscribe.rs  tests.rs  update_last_seen.rs  update_status.rs
backend/proto/: auth.proto  common.proto  media.proto  messaging.proto  presence.proto
backend/tests/: README.md  auth_integration_test.rs  docker-compose.yml  messaging_integration_test.rs
cicd/docker/: Dockerfile.ci
cicd/github/workflows/: build.yml  release.yml  test.yml
client/: MANUAL_TESTING_GUIDE.md  MESSAGING_MANUAL_TESTING_GUIDE.md  QUICK_TESTING_GUIDE.md  README.md  TESTING.md  TESTING_READY.md  envoy-grpc-web.yaml  envoy-local.yaml  pubspec.yaml
client/android/: gradle.properties
client/android/app/: build.gradle.kts
client/integration_test/: README.md  group_api_test.dart  messaging_two_device_test.dart  two_client_messaging_test.dart
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  main.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/macos/Runner.xcodeproj/: project.pbxproj
client/proto/: auth.proto  messaging.proto  presence.proto
client/scripts/: build-all.sh  build-android.sh  build-linux.sh  build-web.sh  clear-client-data.sh  generate_proto.sh  quick-two-client-setup.sh  run-android-test.sh  run-two-client-test.sh  run_integration_tests.sh  start_envoy_proxy.sh  start_two_device_test.sh  test-client.sh  test_two_devices.sh  verify_auth_fix.sh
client/test/: widget_test.dart
client/test_driver/: integration_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
codeql-custom-queries-rust/: codeql-pack.lock.yml  codeql-pack.yml
docs/: ARCHITECTURE.md  CLIENT_TESTING_GUIDE.md  CONTACT.md  DATABASE_SCHEMA.md  DEVELOPER_QUICKSTART.md  DEV_OPTIMIZATION.md  DOCKER_BUILD_GUIDE.md  ENCRYPTION_ARCHITECTURE.md  GRPC_API.md  IMPLEMENTATION_PLAN.md  OBSERVABILITY_GUIDE.md  PORT_MAPPING.md  QUICKSTART_TESTING.md  TESTING_GUIDE.md  TIKV_MIGRATION.md  TWO_CLIENT_TESTING.md  infra_poc.md  mvp_discovery.md
docs/security/pgp/: PGP_KEY_BACKUP.md  PGP_STATUS_SUMMARY.md  QUICK_BACKUP_PGP.md  README.md  SECURITY_PGP_KEY.md
infra/: justfile  k3d-config.yaml
infra/scripts/: apply-dev-patches.sh  bootstrap.sh  build-and-deploy-services.sh  deploy-schemas.sh  deploy.sh  dev-local.sh  fdb-init.sh  fix-cluster-after-restart.sh  port-forward-watchdog.sh  scylla-init.cql  user-management.sh  verify-tikv.sh  verify.sh
infra/secrets/: .gitignore  README.md  app-secrets.yaml
landing/: .gitignore  CUSTOMIZATION.md  FORM_SETUP.md  PACKAGE_OVERVIEW.md  QUICKSTART.md  README.md  _headers  _redirects  coming-soon.html  crypto.html  index.html  privacy.html  robots.txt  sitemap.xml  sponsor.html  terms.html
landing/.well-known/: README.md  WEB_SERVER_CONFIG.md  pgp-key-founder.txt  pgp-key.txt  pgp.html  security.txt
(+167 files in other folders)
