[workspace]
resolver = "2"
members = [
    "crates/auth-service",
    "crates/messaging-service",
    "crates/presence-service",
    "crates/media-service",
    "crates/notification-service",
    "crates/common",
    "crates/crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guardyn Team"]
license = "Apache-2.0"
repository = "https://github.com/guardyn/guardyn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# gRPC and protocols
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (placeholders - will be updated)
libsignal-protocol = "0.1"
openmls = "0.5"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"

# Database clients
tikv-client = "0.3"
scylla = "0.14"

# NATS messaging
async-nats = "0.37"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
config = "0.14"

# Testing
mockall = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
