[workspace]
resolver = "2"
members = [
    "crates/auth-service",
    "crates/messaging-service",
    "crates/presence-service",
    "crates/media-service",
    "crates/notification-service",
    "crates/common",
    "crates/crypto",
    "crates/e2e-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guardyn Team"]
license = "Apache-2.0"
repository = "https://github.com/guardyn/guardyn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Web framework (for WebSocket)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC and protocols
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
# libsignal-rust = "0.1"  # Not needed - custom X3DH/Double Ratchet implementation
openmls = "0.6"  # MLS for group chat encryption (0.6 for stability)
openmls_rust_crypto = "0.3"  # Cryptographic backend for OpenMLS (matching openmls 0.6)
openmls_traits = "0.3"  # Traits for OpenMLS (matching openmls 0.6)
openmls_basic_credential = "0.3"  # Basic credential support (matching openmls 0.6)
x25519-dalek = "2.0"
ed25519-dalek = "2.1"

# Database clients
tikv-client = "0.3"
scylla = "0.14"

# NATS messaging
async-nats = "0.37"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
config = "0.14"

# Testing
mockall = "0.13"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
