[package]
name = "guardyn-auth-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
guardyn-common = { path = "../common" }
guardyn-crypto = { path = "../crypto" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
config.workspace = true
hyper = { version = "0.14", features = ["full"] }
foundationdb.workspace = true
async-nats.workspace = true

# JWT for session tokens
jsonwebtoken = "9.3"

# Password hashing
argon2 = "0.5"

[build-dependencies]
tonic-build.workspace = true
# Password hashing
argon2 = "0.5"
