[package]
name = "guardyn-e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[build-dependencies]
tonic-build = { workspace = true }

[[test]]
name = "e2e_mvp_simplified"
path = "tests/e2e_mvp_simplified.rs"
harness = true

[[test]]
name = "e2e_mls_integration"
path = "tests/e2e_mls_integration.rs"
harness = true

[[test]]
name = "e2e_presence"
path = "tests/e2e_presence.rs"
harness = true

[[test]]
name = "e2e_media"
path = "tests/e2e_media.rs"
harness = true
