[package]
name = "guardyn-messaging-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
guardyn-common = { path = "../common" }
guardyn-crypto = { path = "../crypto" }

tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
config.workspace = true
tikv-client.workspace = true
scylla.workspace = true
async-nats.workspace = true
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
jsonwebtoken = "9.3"

[build-dependencies]
tonic-build.workspace = true
